--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cpush",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "代码推送",
   "main": "index.js",
   "scripts": {
     "start": "node ./index.ts",
-    "dev": "node client/index.ts --config=mpush.client.conf.js NODE_ENV=dev",
+    "dev": "cs --config=mpush.client.conf.js",
     "server": "node server/index.ts"
   },
   "bin": {
