--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./index.ts",
-    "dev": "cs --config=mpush.client.conf.js",
-    "server": "node server/index.ts"
+    "dev": "webpack --config=./build/webpack.client.js && node ./dist/client.js --config=cpush.conf.js",
+    "server": "webpack --config=./build/webpack.server.js && node ./dist/server.js",
+    "build": "webpack --config=./build/webpack.all.js",
+    "build:client": "webpack --config=./build/webpack.client.js",
+    "build:server": "webpack --config=./build/webpack.server.js"
   },
   "bin": {
-    "cs": "client/index.ts",
-    "cl": "server/index.ts"
+    "cs": "dist/client.js",
+    "cl": "dist/server.js"
   },
   "author": "xujiangping",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^16.9.1"
+    "@types/node": "^16.9.1",
+    "crypto-browserify": "^3.12.0",
+    "ts-loader": "^9.2.6",
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0"
   }
 }
