--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^16.9.1",
     "crypto-browserify": "^3.12.0",
     "ts-loader": "^9.2.6",
+    "typescript": "^4.4.3",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0"
   }
